# hyni_gc

./: CMakeLists.txt  README.md
hyni_py/: chat_api.py  http_client_factory.py
hyni_py/examples/: example.py
python/: general_context.py
schemas/: claude.json  deepseek.json  mistral.json  openai.json
src/: chat_api.cpp  chat_api.h  claudeai_context.cpp  claudeai_context.h  config.h  context_factory.h  deepseek_context.cpp  deepseek_context.h  general_context.cpp  general_context.h  http_client.cpp  http_client.h  model_context.h  openai_context.cpp  openai_context.h  schema_manager.cpp  schema_manager.h
tests/: chat_api_func_test.cpp  chat_api_test.cpp  general_context_func_test.cpp  schema_manager_test.cpp
ui/: CMakeLists.txt  chat_widget.cpp  main.cpp
